<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:scaleType="fitXY">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxWidth="45dp"
                android:maxHeight="45dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="30dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!--  Name Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouse_param_name" />

        <EditText android:id="@+id/warehouse_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/warehouse_param_name" />

        <!-- Description Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouse_param_description" />

        <EditText android:id="@+id/warehouse_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/warehouse_param_description" />

        <!--TO REMOVE AND REPLACE WITH FRAGMENT-->
        <!-- Latitude Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouse_param_latitude" />

        <EditText android:id="@+id/warehouse_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/warehouse_param_latitude" />

        <!-- Longitude Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouse_param_longitude" />
        <EditText android:id="@+id/warehouse_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/warehouse_param_longitude" />

        <!--Map fragment-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location" />
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/warehouse_map"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <!-- Action Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp" />
    </LinearLayout>
</ScrollView>